...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3CE-lO-8uH" userLabel="LikeButton">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="noLike"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like">
                                                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="0.20207141689999999" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="tapLikeButton:" destination="vEK-oU-DAr" eventType="touchUpInside" id="8iM-io-fqZ"/>
...
                                <connections>
                                    <outlet property="delegate" destination="V2k-p4-ylh" id="km0-mh-RNi"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Frl-rf-iwr">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="singleViewBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="6YQ-gi-JMr"/>
                                    <constraint firstAttribute="width" constant="48" id="PLe-X7-eDm"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_button"/>
...
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="WpU-b1-kPq"/>
                                    <constraint firstAttribute="height" constant="60" id="ZGm-2A-K2G"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pY1-e8-dek" userLabel="AuthButton">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="gNy-fR-XDK"/>
                                </constraints>
...
