...
        let cache = ImageCache.default
        cache.clearDiskCache()
    }
    
    private let exitButton: UIButton = {
        let button = UIButton()
        let image = UIImage(named: "exit")
        button.accessibilityIdentifier = "exit"
        button.setImage(image, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
...
